api gateway - day1, 2
